tests/sawn/fixtures/invalid/13_single_quotes.sawn
// INVALID: Single-quoted strings are not allowed
name='Luke'
